Consultas de Tabela de Preço
Novas 4 rotas, 2 controllers e 2 models.
Nova view com tabelas ativas no momento.
Documentação das novas rotas no Swagger.
Incremento do script de inicialização do ambiente.
