# js/summer/src/controllers/prices/prices-adapter.js
@@ -1,0 +1,20 @@
+const mappingFieldsPrice = {
+	crop: "SAFRA"
+}
+
+const mappingDBFieldsPrice = {
+
+	CODIGO_TABELA: "id",
+	DESCRICAO: "description",
+	SAFRA: "crop",
+	ITEM: "item",
+	PRODUTO: "product",
+	PRECO: "price",
+	MOEDA: "currency",
+	DA1_CODTAB: "id",
+	DA1_CODPRO: "product",
+	DA1_PRCVEN: "price",
+	DA1_MOEDA: "currency"
+}
+
+export {mappingFieldsPrice , mappingDBFieldsPrice}
