# js/summer/src/swagger.json
@@ -472,6 +472,223 @@
 				}
 			}
 		},
+		"/prices": {
+			"get": {
+				"summary": "Get prices tables without items",
+				"description": "Get the price tables actives on the ERP without items.",
+				"tags": [
+					"Price Tables"
+				],
+				"parameters": [
+					{
+						"name": "pageSize",
+						"in": "query",
+						"description": "The number of registries to return",
+						"required": false,
+						"schema": {
+							"type": "integer",
+							"minimum": 1
+						}
+					},
+					{
+						"name": "pageNumber",
+						"in": "query",
+						"description": "Control of pagination on search",
+						"required": false,
+						"schema": {
+							"type": "integer",
+							"minimum": 1
+						}
+					},
+					{
+						"name": "crop",
+						"in": "query",
+						"description": "Filter by a specific crop. Format: AAAA/AAAA",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "A list of price tables according to the filters parameters",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "array",
+									"items": {
+										"$ref": "#/components/schemas/PriceTableNoItems"
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+		"/prices/items": {
+			"get": {
+				"summary": "Get prices tables with items",
+				"description": "Get the price tables actives on the ERP with items.",
+				"tags": [
+					"Price Tables"
+				],
+				"parameters": [
+					{
+						"name": "pageSize",
+						"in": "query",
+						"description": "The number of registries to return",
+						"required": false,
+						"schema": {
+							"type": "integer",
+							"minimum": 1
+						}
+					},
+					{
+						"name": "pageNumber",
+						"in": "query",
+						"description": "Control of pagination on search",
+						"required": false,
+						"schema": {
+							"type": "integer",
+							"minimum": 1
+						}
+					},
+					{
+						"name": "crop",
+						"in": "query",
+						"description": "Filter by a specific crop. Format: AAAA/AAAA",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "A list of price tables according to the filters parameters",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "array",
+									"items": {
+										"$ref": "#/components/schemas/PriceTable"
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+		"/prices/:table/items": {
+			"get": {
+				"summary": "Get items from a prices tables",
+				"description": "Get the items from a price tables active on the ERP.",
+				"tags": [
+					"Price Tables"
+				],
+				"parameters": [					
+					{
+						"name": "table",
+						"in": "path",
+						"description": "A specific price table id to search the items.",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "A price table th all items according to the parameter",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/PriceTable"
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+		"/prices/:table/item/:product": {
+			"get": {
+				"summary": "Get a price from a product",
+				"description": "Get the price of a specific product from a specific price table",
+				"tags": [
+					"Price Tables"
+				],
+				"parameters": [					
+					{
+						"name": "table",
+						"in": "path",
+						"description": "A specific price table id to search.",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"name": "product",
+						"in": "path",
+						"description": "A specific product id to search the price.",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "A price table from a specific product",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"id":{
+											"type": "string"
+										},
+										"product":{
+											"type": "string"
+										},
+										"price":{
+											"type": "number"
+										},
+										"currency":{
+											"type": "string"
+										}
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		},
 		"/login": {
 			"post": {
 				"summary": "Login for testing",
@@ -629,6 +846,57 @@
 					},
 					"description":{
 						"type": "string"
+					}
+				}
+			},
+			"PriceTableNoItems": {
+				"type": "object",
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"crop": {
+						"type": "string"
+					}
+				}
+			},
+			"PriceTableItem": {
+				"type": "object",
+				"properties": {
+					"item": {
+						"type": "string"
+					},
+					"product": {
+						"type": "string"
+					},
+					"price": {
+						"type": "number"
+					},
+					"currency":{ 
+						"type": "string"
+					}
+				}
+			},
+			"PriceTable": {
+				"type": "object",
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"crop": {
+						"type": "string"
+					},
+					"items":{ 
+						"type": "array",
+						"items": {
+							"$ref": "#/components/schemas/PriceTableItem"
+						}
 					}
 				}
 			}
